# study-sci

./: .gitignore  NOTE-Jupyter.md  Pipfile  README.md  TODO.md  conda.yml
example/: test.py
juyi/: .coverage  LICENSE.txt  README.md  pyproject.toml
juyi/juyi/: __about__.py  __init__.py  main.py
notes/: NOTE-Jupyter.md  NOTE-ipython-concept.md  NOTE-ipython.md
tuts/: 1-matplot-basic.py  2-numpy.py  3-jupyter-ipython.ipynb  4-more-matplotlib-example.ipynb  5-sympy.ipynb  6-sympy-calculus.ipynb  debug.jupyterlab-workspace  test-err.py  test.py
